--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.9",
-    "@angular/common": "~10.0.9",
-    "@angular/compiler": "~10.0.9",
-    "@angular/core": "~10.0.9",
+    "@angular/animations": "^10.0.10",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
     "@angular/fire": "^6.0.2",
-    "@angular/forms": "~10.0.9",
-    "@angular/localize": "~10.0.9",
-    "@angular/platform-browser": "~10.0.9",
-    "@angular/platform-browser-dynamic": "~10.0.9",
-    "@angular/router": "~10.0.9",
+    "@angular/forms": "^10.0.10",
+    "@angular/localize": "^10.0.10",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/router": "^10.0.10",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.2",
     "firebase": "^7.18.0",
@@ -33,7 +33,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.6",
     "@angular/cli": "~10.0.6",
-    "@angular/compiler-cli": "~10.0.9",
+    "@angular/compiler-cli": "^10.0.10",
     "@types/jasmine": "~3.5.12",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.6.0",
