--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
+    "rxjs-compat": "^6.6.2",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
