--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.2",
     "firebase": "^7.18.0",
     "jquery": "^3.5.1",
