--- a/package.json
+++ b/package.json
@@ -11,20 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.10",
-    "@angular/common": "^10.0.10",
-    "@angular/compiler": "^10.0.10",
-    "@angular/core": "^10.0.10",
+    "@angular/animations": "^10.0.11",
+    "@angular/common": "^10.0.11",
+    "@angular/compiler": "^10.0.11",
+    "@angular/core": "^10.0.11",
     "@angular/fire": "^6.0.2",
-    "@angular/forms": "^10.0.10",
-    "@angular/localize": "^10.0.10",
-    "@angular/platform-browser": "^10.0.10",
-    "@angular/platform-browser-dynamic": "^10.0.10",
-    "@angular/router": "^10.0.10",
+    "@angular/forms": "^10.0.11",
+    "@angular/localize": "^10.0.11",
+    "@angular/platform-browser": "^10.0.11",
+    "@angular/platform-browser-dynamic": "^10.0.11",
+    "@angular/router": "^10.0.11",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angularfire2": "^5.4.2",
     "bootstrap": "^4.5.2",
-    "firebase": "^7.18.0",
+    "firebase": "^7.19.0",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
@@ -33,9 +33,9 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.6",
-    "@angular/cli": "~10.0.6",
-    "@angular/compiler-cli": "^10.0.10",
+    "@angular-devkit/build-angular": "^0.1000.7",
+    "@angular/cli": "^10.0.7",
+    "@angular/compiler-cli": "^10.0.11",
     "@types/jasmine": "~3.5.12",
     "@types/jasminewd2": "~2.0.8",
     "@types/node": "^14.6.0",
