--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bootstrap": "^4.5.2",
     "firebase": "^7.19.0",
     "jquery": "^3.5.1",
+    "ng2-validation": "^4.2.0",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.2",
     "rxjs-compat": "^6.6.2",
